JavaGrammar.java
/* JavaGrammar.java */
/* Generated By:JavaCC: Do not edit this line. JavaGrammar.java */
import java.io.*;
import java.util.*;

public class JavaGrammar implements JavaGrammarConstants {
    private static Map<String, List<String>> symbolTable = new HashMap<>();

    public static void main(String[] args) throws ParseException, FileNotFoundException {
        try {
            if (args.length > 0) {
                FileInputStream fis = new FileInputStream(args[0]);
                JavaGrammar parser = new JavaGrammar(fis);
                parser.CompilationUnit();
                System.out.println("Syntax validation successful!");
                System.out.println("\nSymbol Table:");
                for (Map.Entry<String, List<String>> entry : symbolTable.entrySet()) {
                    System.out.println(entry.getKey() + ": " + entry.getValue());
                }
            } else {
                System.out.println("Please provide a Java source file as an argument.");
            }
        } catch (ParseException e) {
            System.err.println("Syntax Error: " + e.getMessage());
            throw e;
        }
    }

    private static void addToSymbolTable(String type, String identifier) {
        if (!symbolTable.containsKey(type)) {
            symbolTable.put(type, new ArrayList<>());
        }
        symbolTable.get(type).add(identifier);
    }

  final public void CompilationUnit() throws ParseException {
    ClassDeclaration();
    jj_consume_token(0);
}

  final public void ClassDeclaration() throws ParseException {Token className;
    jj_consume_token(CLASS);
    className = jj_consume_token(IDENTIFIER);
addToSymbolTable("Class", className.image);
    jj_consume_token(LBRACE);
    label_1:
    while (true) {
      if (jj_2_1(3)) {
        ;
      } else {
        break label_1;
      }
      ClassBodyDeclaration();
    }
    jj_consume_token(RBRACE);
}

  final public void ClassBodyDeclaration() throws ParseException {
    if (jj_2_2(3)) {
      FieldDeclaration();
    } else if (jj_2_3(3)) {
      MethodDeclaration();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void FieldDeclaration() throws ParseException {Token varName;
    if (jj_2_7(3)) {
      if (jj_2_4(3)) {
        jj_consume_token(PUBLIC);
      } else if (jj_2_5(3)) {
        jj_consume_token(PRIVATE);
      } else if (jj_2_6(3)) {
        jj_consume_token(PROTECTED);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
    if (jj_2_8(3)) {
      jj_consume_token(STATIC);
    } else {
      ;
    }
    if (jj_2_9(3)) {
      jj_consume_token(INT);
    } else if (jj_2_10(3)) {
      jj_consume_token(STRING);
    } else if (jj_2_11(3)) {
      jj_consume_token(BOOLEAN);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    varName = jj_consume_token(IDENTIFIER);
    if (jj_2_12(3)) {
      jj_consume_token(ASSIGNMENT);
      Expression();
    } else {
      ;
    }
    jj_consume_token(SEMICOLON);
addToSymbolTable("Field", varName.image);
}

  final public void MethodDeclaration() throws ParseException {Token methodName;
    if (jj_2_16(3)) {
      if (jj_2_13(3)) {
        jj_consume_token(PUBLIC);
      } else if (jj_2_14(3)) {
        jj_consume_token(PRIVATE);
      } else if (jj_2_15(3)) {
        jj_consume_token(PROTECTED);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
    if (jj_2_17(3)) {
      jj_consume_token(STATIC);
    } else {
      ;
    }
    if (jj_2_18(3)) {
      jj_consume_token(VOID);
    } else if (jj_2_19(3)) {
      jj_consume_token(INT);
    } else if (jj_2_20(3)) {
      jj_consume_token(STRING);
    } else if (jj_2_21(3)) {
      jj_consume_token(BOOLEAN);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    methodName = jj_consume_token(IDENTIFIER);
addToSymbolTable("Method", methodName.image);
    jj_consume_token(LPAREN);
    ParameterList();
    jj_consume_token(RPAREN);
    Block();
}

  final public void ParameterList() throws ParseException {
    if (jj_2_23(3)) {
      Parameter();
      label_2:
      while (true) {
        if (jj_2_22(3)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(COMMA);
        Parameter();
      }
    } else {
      ;
    }
}

  final public void Parameter() throws ParseException {Token paramName;
    if (jj_2_24(3)) {
      jj_consume_token(INT);
    } else if (jj_2_25(3)) {
      jj_consume_token(STRING);
    } else if (jj_2_26(3)) {
      jj_consume_token(BOOLEAN);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    paramName = jj_consume_token(IDENTIFIER);
addToSymbolTable("Parameter", paramName.image);
}

  final public void Block() throws ParseException {
    jj_consume_token(LBRACE);
    label_3:
    while (true) {
      if (jj_2_27(3)) {
        ;
      } else {
        break label_3;
      }
      BlockStatement();
    }
    jj_consume_token(RBRACE);
}

  final public void BlockStatement() throws ParseException {
    if (jj_2_28(3)) {
      VariableDeclaration();
    } else if (jj_2_29(3)) {
      Statement();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void Statement() throws ParseException {
    if (jj_2_30(3)) {
      Assignment();
    } else if (jj_2_31(3)) {
      IfStatement();
    } else if (jj_2_32(3)) {
      WhileStatement();
    } else if (jj_2_33(3)) {
      ReturnStatement();
    } else if (jj_2_34(3)) {
      Block();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void VariableDeclaration() throws ParseException {Token varName;
    if (jj_2_35(3)) {
      jj_consume_token(INT);
    } else if (jj_2_36(3)) {
      jj_consume_token(STRING);
    } else if (jj_2_37(3)) {
      jj_consume_token(BOOLEAN);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    varName = jj_consume_token(IDENTIFIER);
    if (jj_2_38(3)) {
      jj_consume_token(ASSIGNMENT);
      Expression();
    } else {
      ;
    }
    jj_consume_token(SEMICOLON);
addToSymbolTable("LocalVariable", varName.image);
}

  final public void Assignment() throws ParseException {Token varName;
    varName = jj_consume_token(IDENTIFIER);
    jj_consume_token(ASSIGNMENT);
    Expression();
    jj_consume_token(SEMICOLON);
addToSymbolTable("AssignedVariable", varName.image);
}

  final public void IfStatement() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
    Statement();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      Statement();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
}

  final public void WhileStatement() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
    Statement();
}

  final public void ReturnStatement() throws ParseException {
    jj_consume_token(RETURN);
    if (jj_2_39(3)) {
      Expression();
    } else {
      ;
    }
    jj_consume_token(SEMICOLON);
}

  final public void Expression() throws ParseException {
    LogicalExpression();
}

  final public void LogicalExpression() throws ParseException {
    ComparisonExpression();
    label_4:
    while (true) {
      if (jj_2_40(3)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(LOGICAL_OP);
      ComparisonExpression();
    }
}

  final public void ComparisonExpression() throws ParseException {
    ArithmeticExpression();
    if (jj_2_41(3)) {
      jj_consume_token(COMPARISON);
      ArithmeticExpression();
    } else {
      ;
    }
}

  final public void ArithmeticExpression() throws ParseException {
    Term();
    label_5:
    while (true) {
      if (jj_2_42(3)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(ARITHMETIC_OP);
      Term();
    }
}

  final public void Term() throws ParseException {
    if (jj_2_43(3)) {
      jj_consume_token(INTEGER_LITERAL);
    } else if (jj_2_44(3)) {
      jj_consume_token(STRING_LITERAL);
    } else if (jj_2_45(3)) {
      jj_consume_token(BOOLEAN_LITERAL);
    } else if (jj_2_46(3)) {
      jj_consume_token(IDENTIFIER);
    } else if (jj_2_47(3)) {
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_17()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_18()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_19()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_20()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_21()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_22()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_23()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_24()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_25()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_26()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_27()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_28()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_29()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_30()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_31()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_32()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_33()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_34()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_35()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_36()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_37()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_2_38(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_38()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  private boolean jj_2_39(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_39()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  private boolean jj_2_40(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_40()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  private boolean jj_2_41(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_41()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  private boolean jj_2_42(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_42()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  private boolean jj_2_43(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_43()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  private boolean jj_2_44(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_44()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  private boolean jj_2_45(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_45()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  private boolean jj_2_46(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_46()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  private boolean jj_2_47(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_47()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(46, xla); }
  }

  private boolean jj_3_36()
 {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3R_Assignment_177_5_14()
 {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(ASSIGNMENT)) return true;
    if (jj_3R_Expression_206_5_9()) return true;
    return false;
  }

  private boolean jj_3_38()
 {
    if (jj_scan_token(ASSIGNMENT)) return true;
    if (jj_3R_Expression_206_5_9()) return true;
    return false;
  }

  private boolean jj_3_35()
 {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  private boolean jj_3R_VariableDeclaration_167_5_12()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_35()) {
    jj_scanpos = xsp;
    if (jj_3_36()) {
    jj_scanpos = xsp;
    if (jj_3_37()) return true;
    }
    }
    if (jj_scan_token(IDENTIFIER)) return true;
    xsp = jj_scanpos;
    if (jj_3_38()) jj_scanpos = xsp;
    if (jj_scan_token(SEMICOLON)) return true;
    return false;
  }

  private boolean jj_3_34()
 {
    if (jj_3R_Block_147_5_18()) return true;
    return false;
  }

  private boolean jj_3_33()
 {
    if (jj_3R_ReturnStatement_200_5_17()) return true;
    return false;
  }

  private boolean jj_3_26()
 {
    if (jj_scan_token(BOOLEAN)) return true;
    return false;
  }

  private boolean jj_3_32()
 {
    if (jj_3R_WhileStatement_194_5_16()) return true;
    return false;
  }

  private boolean jj_3_31()
 {
    if (jj_3R_IfStatement_187_5_15()) return true;
    return false;
  }

  private boolean jj_3R_Statement_159_5_13()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_30()) {
    jj_scanpos = xsp;
    if (jj_3_31()) {
    jj_scanpos = xsp;
    if (jj_3_32()) {
    jj_scanpos = xsp;
    if (jj_3_33()) {
    jj_scanpos = xsp;
    if (jj_3_34()) return true;
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_30()
 {
    if (jj_3R_Assignment_177_5_14()) return true;
    return false;
  }

  private boolean jj_3_21()
 {
    if (jj_scan_token(BOOLEAN)) return true;
    return false;
  }

  private boolean jj_3_29()
 {
    if (jj_3R_Statement_159_5_13()) return true;
    return false;
  }

  private boolean jj_3_27()
 {
    if (jj_3R_BlockStatement_153_5_11()) return true;
    return false;
  }

  private boolean jj_3R_BlockStatement_153_5_11()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_28()) {
    jj_scanpos = xsp;
    if (jj_3_29()) return true;
    }
    return false;
  }

  private boolean jj_3_28()
 {
    if (jj_3R_VariableDeclaration_167_5_12()) return true;
    return false;
  }

  private boolean jj_3_25()
 {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3_15()
 {
    if (jj_scan_token(PROTECTED)) return true;
    return false;
  }

  private boolean jj_3R_Block_147_5_18()
 {
    if (jj_scan_token(LBRACE)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_27()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(RBRACE)) return true;
    return false;
  }

  private boolean jj_3_20()
 {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3_22()
 {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_Parameter_139_5_10()) return true;
    return false;
  }

  private boolean jj_3_24()
 {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  private boolean jj_3R_Parameter_139_5_10()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_24()) {
    jj_scanpos = xsp;
    if (jj_3_25()) {
    jj_scanpos = xsp;
    if (jj_3_26()) return true;
    }
    }
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  private boolean jj_3_23()
 {
    if (jj_3R_Parameter_139_5_10()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_22()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3_47()
 {
    if (jj_scan_token(LPAREN)) return true;
    if (jj_3R_Expression_206_5_9()) return true;
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  private boolean jj_3_6()
 {
    if (jj_scan_token(PROTECTED)) return true;
    return false;
  }

  private boolean jj_3_46()
 {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  private boolean jj_3_45()
 {
    if (jj_scan_token(BOOLEAN_LITERAL)) return true;
    return false;
  }

  private boolean jj_3_14()
 {
    if (jj_scan_token(PRIVATE)) return true;
    return false;
  }

  private boolean jj_3_11()
 {
    if (jj_scan_token(BOOLEAN)) return true;
    return false;
  }

  private boolean jj_3_19()
 {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  private boolean jj_3_44()
 {
    if (jj_scan_token(STRING_LITERAL)) return true;
    return false;
  }

  private boolean jj_3R_Term_225_5_21()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_43()) {
    jj_scanpos = xsp;
    if (jj_3_44()) {
    jj_scanpos = xsp;
    if (jj_3_45()) {
    jj_scanpos = xsp;
    if (jj_3_46()) {
    jj_scanpos = xsp;
    if (jj_3_47()) return true;
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_43()
 {
    if (jj_scan_token(INTEGER_LITERAL)) return true;
    return false;
  }

  private boolean jj_3_42()
 {
    if (jj_scan_token(ARITHMETIC_OP)) return true;
    if (jj_3R_Term_225_5_21()) return true;
    return false;
  }

  private boolean jj_3R_ArithmeticExpression_220_5_20()
 {
    if (jj_3R_Term_225_5_21()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_42()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3_18()
 {
    if (jj_scan_token(VOID)) return true;
    return false;
  }

  private boolean jj_3_41()
 {
    if (jj_scan_token(COMPARISON)) return true;
    if (jj_3R_ArithmeticExpression_220_5_20()) return true;
    return false;
  }
